--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.26.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
