--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     depends_on:
       - backend
     env_file:
-      - ./frontend/.env
+      - frontend/.env
+    command: npm run dev
 
   backend:
     build:
@@ -16,4 +17,4 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - ./backend/.env
+      - backend/cmd/server/.env
